Fix: Removed JSX-style comments from index.html

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#111827" /> {/* Updated to match dark theme */}
-    
-    {/* SEO Meta Tags */}
+    <meta name="theme-color" content="#111827" /> <!-- Updated to match dark theme -->
+<!-- SEO Meta Tags -->
+<!-- Open Graph / Facebook Meta Tags -->
+<!-- Replace with actual domain when live -->
     <title>Golden Age Mindset - AI Integration & Investment Strategies</title>
     <meta
       name="description"
