--- a/index.html
+++ b/index.html
@@ -4,30 +4,33 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#111827" /> {/* Updated to match dark theme */}
-    
-    {/* SEO Meta Tags */}
-    <title>Golden Age Mindset - AI Integration & Investment Strategies</title>
+    <meta name="theme-color" content="#111827" />
+<!-- Updated to match dark theme -->
+<!-- SEO Meta Tags -->
+<!-- Open Graph / Facebook Meta Tags -->
+<!-- Replace with actual domain when live -->
+
+    <title>AI course Upskill your future withe knowledge you need to succeed</title>
     <meta
       name="description"
-      content="Unlock your potential in the age of AI with Golden Age Mindset. We provide the tools, insights, and strategies to outthink the hype and invest with confidence. Join our AI integration course and start your 7-day free trial today!"
+      content="Unlock your potential in the age of AI with AIINTEGRATIONCOURSE.com. We provide the tools, insights, and strategies to outthink the hype and invest with confidence. Join our AI integration course and start your 7-day free trial today!"
     />
     <meta name="keywords" content="AI, Artificial Intelligence, Investing, Course, Education, Skills, Strategies, Future, Technology, Machine Learning, AI Tools" />
-    <meta name="author" content="Golden Age Mindset" />
+    <meta name="author" content="AIINTEGRATIONCOURSE" />
 
-    {/* Open Graph / Facebook Meta Tags */}
+    {!-- Open Graph / Facebook Meta Tags --}
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="%PUBLIC_URL%/" /> {/* Replace with actual domain when live */}
-    <meta property="og:title" content="Golden Age Mindset - AI Integration & Investment Strategies" />
-    <meta property="og:description" content="Unlock your potential in the age of AI. We provide tools, insights, and strategies to outthink the hype and invest with confidence. Join our AI integration course!" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" /> {/* Ensure you have a logo512.png or update path */}
+    <meta property="og:url" content="%WWW.AIINTEGRATIONCOURSE.COM%/" /> {!--Replace with actual domain when live }
+    <meta property="og:title" content= " Learn AI today for integration into your flow and stay ahead of the curve" />
+    <meta property="og:description" content="Unlock your potential in the age of AI. We provide tools, insights, and strategies to outthink the hype and utilize AI with confidence. Join our AI integration course Today for a Free personalized Lesson!" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" /> {!--Ensure you have a logo512.png or update path }
 
-    {/* Twitter Meta Tags */}
+    {!--Twitter Meta Tags --}
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="%PUBLIC_URL%/" /> {/* Replace with actual domain when live */}
-    <meta property="twitter:title" content="Golden Age Mindset - AI Integration & Investment Strategies" />
-    <meta property="twitter:description" content="Unlock your potential in the age of AI. We provide tools, insights, and strategies to outthink the hype and invest with confidence. Join our AI integration course!" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" /> {/* Ensure you have a logo512.png or update path */}
+    <meta property="twitter:url" content="%www.x.com%/" /> {!-- Replace with actual domain when live }
+    <meta property="twitter:title" content="AIintegrationcourse.com" />
+    <meta property="twitter:description" content="Unlock your potential in the age of AI. We provide tools, insights, and strategies to outthink the hype and integrate AI into your workflow with confidence. Join our AI integration course learn The latest AI tools and use cases now!" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
