Fix dependency conflicts and add OpenSSL legacy provider

--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,17 @@
     <meta name="keywords" content="AI, Artificial Intelligence, Investing, Course, Education, Skills, Strategies, Future, Technology, Machine Learning, AI Tools" />
     <meta name="author" content="Golden Age Mindset" />
 
-    {/* Open Graph / Facebook Meta Tags */}
+    
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="%PUBLIC_URL%/" /> {/* Replace with actual domain when live */}
+    <meta property="og:url" content="%PUBLIC_URL%/" /> 
     <meta property="og:title" content="Golden Age Mindset - AI Integration & Investment Strategies" />
     <meta property="og:description" content="Unlock your potential in the age of AI. We provide tools, insights, and strategies to outthink the hype and invest with confidence. Join our AI integration course!" />
-    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" /> {/* Ensure you have a logo512.png or update path */}
-
-    {/* Twitter Meta Tags */}
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="%PUBLIC_URL%/" /> {/* Replace with actual domain when live */}
+    <meta property="twitter:url" content="%PUBLIC_URL%/" />
     <meta property="twitter:title" content="Golden Age Mindset - AI Integration & Investment Strategies" />
     <meta property="twitter:description" content="Unlock your potential in the age of AI. We provide tools, insights, and strategies to outthink the hype and invest with confidence. Join our AI integration course!" />
-    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" /> {/* Ensure you have a logo512.png or update path */}
+    <meta property="twitter:image" content="%PUBLIC_URL%/logo512.png" /> 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
